--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="Status">Status</string>
     <string name="Name">Name : </string>
     <string name="ChangeName">Change name</string>
+    <string name="SpeechSaveSucces">Speech saved !</string>
 </resources>
